--- a/po/pl/kfax.po
+++ b/po/pl/kfax.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kfax\n"
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
-"PO-Revision-Date: 1998-06-24 00:22+0200\n"
+"PO-Revision-Date: 1999-01-03 12:22+0100\n"
 "Last-Translator: Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
 
@@ -86,7 +86,7 @@ msgstr "Po&mniejsz"
 #: kfax.cpp:433
 #, fuzzy
 msgid "&Fax Options..."
-msgstr "Opcje &faxu"
+msgstr "Opcje &faksu"
 
 #: kfax.cpp:435
 msgid "&Tool Bar"
@@ -208,7 +208,7 @@ msgstr "£adowanie '%s'"
 
 #: kfax.cpp:1195
 msgid "Done"
-msgstr ""
+msgstr "Gotowe"
 
 #: kfax.cpp:1209
 msgid "Calling KFM"
@@ -320,7 +320,7 @@ msgstr "Dobra"
 
 #: options.cpp:74
 msgid "Normal"
-msgstr ""
+msgstr "Normalna"
 
 #: options.cpp:81
 msgid "Display Options:"
