CVS_SILENT: made messages

--- a/po/pl/kiconedit.po
+++ b/po/pl/kiconedit.po
@@ -295,7 +295,8 @@ msgstr ""
 "Jest to obszar, gdzie mo¿na rysowaæ ikonê.\n"
 "Mo¿na go powiêkszaæ i pomniejszaæ za pomoc± szk³a powiêkszaj±cego\n"
 "z paska narzedziowego. (Wskazówka: Przytrzymaj wci¶niêty przycisk ze szk³em\n"
-"powiêkszaj±cym przez kilka sekund, aby przej¶æ do uprzednio zdefiniowanej skali"
+"powiêkszaj±cym przez kilka sekund, aby przej¶æ do uprzednio zdefiniowanej "
+"skali"
 
 #: kiconedit.cpp:790
 msgid ""
@@ -322,8 +323,7 @@ msgid ""
 msgstr ""
 "Pasek stanu\n"
 "\n"
-"Jak nazwa wskazuje podaje stan bie¿±cej ikony. "
-"Pola wskazuj±:\n"
+"Jak nazwa wskazuje podaje stan bie¿±cej ikony. Pola wskazuj±:\n"
 "\n"
 "\t- Pozycjê kursora\n"
 "\t- Rozmiar\n"
@@ -402,8 +402,8 @@ msgid ""
 msgstr ""
 "Drukowanie\n"
 "\n"
-"Otwiera dialog drukowania aby wydrukowaæ bie¿±c± ikonê (Nie do koñca"
-"dzia³a jak mo¿naby tego oczekiwaæ)"
+"Otwiera dialog drukowania aby wydrukowaæ bie¿±c± ikonê (Nie do koñcadzia³a "
+"jak mo¿naby tego oczekiwaæ)"
 
 #: kiconedit.cpp:828
 msgid ""
@@ -449,8 +449,8 @@ msgstr ""
 "\n"
 "Wklej zawarto¶æ schowka do bie¿±cej ikony.\n"
 "\n"
-"Je¶li zawarto¶æ schowka jest wiêksza od bie¿acej ikony to mo¿na wkleiæ "
-"go do nowego okna\n"
+"Je¶li zawarto¶æ schowka jest wiêksza od bie¿acej ikony to mo¿na wkleiæ go do "
+"nowego okna\n"
 "\n"
 "(Wskazówka: Wybierz \"Wklejaj prze¼roczyste piksele\" w dialogu "
 "konfiguracyjnego je¶li chcesz wklejaæ w sposób prze¼roczysty)"
@@ -489,8 +489,8 @@ msgstr ""
 "Poziomy szaro¶ci\n"
 "\n"
 "Zmieñ bie¿±c± ikonê w wykorzystuj±c± jedynie poziomy szaro¶ci.\n"
-"(Ostrze¿enie: wynik najpewniej bêdzie zawiera³ kolory spoza palety "
-"kolorów ikon)"
+"(Ostrze¿enie: wynik najpewniej bêdzie zawiera³ kolory spoza palety kolorów "
+"ikon)"
 
 #: kiconedit.cpp:854
 msgid ""
@@ -553,8 +553,9 @@ msgstr ""
 "Skoro to czytasz to ju¿ pewnie wiesz ;-)"
 
 #: kiconedit.cpp:871
+#, fuzzy
 msgid ""
-"¬ród³o przeci±gniêcia\n"
+"Drag source\n"
 "\n"
 "From this button you can drag out a copy of the current icon and drop it on "
 "a drop enabled window, eg. another Icon Editor.\n"
@@ -564,8 +565,8 @@ msgid ""
 msgstr ""
 "Przeci±gnij ¼ród³o\n"
 "\n"
-"Z tego przycisku mo¿na przeci±gn±æ bie¿±c± ikonê na inne okno, które "
-"jest w stanie go przechwyciæ lub na inne okno Edytora Ikon.\n"
+"Z tego przycisku mo¿na przeci±gn±æ bie¿±c± ikonê na inne okno, które jest w "
+"stanie go przechwyciæ lub na inne okno Edytora Ikon.\n"
 "\n"
 "(Uwaga: ¬ród³o przeci±gniêcia u¿ywa protoko³u QT XDND, który nie jest "
 "jeszcze standardem w KDE)"
@@ -588,8 +589,7 @@ msgid ""
 msgstr ""
 "Wype³nienie kolorem\n"
 "\n"
-"Wype³ñ wszystkie s±siaduj±ce piksele o tym samym kolorze bie¿±cym "
-"kolorem"
+"Wype³ñ wszystkie s±siaduj±ce piksele o tym samym kolorze bie¿±cym kolorem"
 
 #: kiconedit.cpp:885
 msgid ""
@@ -818,7 +818,6 @@ msgstr ""
 "\n"
 "Chcesz go otworzyæ?"
 
-
 #: kicon.cpp:143
 msgid "The file:\n"
 msgstr "Plik:\n"
@@ -836,7 +835,8 @@ msgid ""
 "The Icon Editor is already downloading a non-local file.\n"
 "Please wait.\n"
 msgstr ""
-"Program w³a¶nie ¶ci±ga plik z sieci.\n.\n"
+"Program w³a¶nie ¶ci±ga plik z sieci.\n"
+".\n"
 "Proszê czekaæ.\n"
 
 #: kicon.cpp:170
