--- a/po/is/kghostview.po
+++ b/po/is/kghostview.po
@@ -647,6 +647,7 @@ msgid ""
 "Set Environment variable (to PRINTER or LPDEST for instance)for Printer name "
 "to be taken into account."
 msgstr ""
+"Stilltu hvaða umhverfisbreyta er látin stjórna prentaranafni."
 
 #: kghostview.cpp:1661
 #, c-format
